--- a/URANAI/Base.lproj/Main.storyboard
+++ b/URANAI/Base.lproj/Main.storyboard
@@ -49,8 +49,10 @@
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="UWd-d6-V2s">
                                         <rect key="frame" x="0.0" y="327" width="414" height="83"/>
                                         <segments>
-                                            <segment title="First"/>
-                                            <segment title="Second"/>
+                                            <segment title="A型"/>
+                                            <segment title="B型"/>
+                                            <segment title="O型"/>
+                                            <segment title="AB型"/>
                                         </segments>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="好きな数を指定してください" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lSP-yr-3FJ">
@@ -76,6 +78,9 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="finalResult:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1sj-ax-OUg"/>
+                                        </connections>
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xfn-b7-CJc">
                                         <rect key="frame" x="0.0" y="736" width="414" height="82"/>
@@ -96,13 +101,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="birthDayPicker" destination="7Kc-N8-1NS" id="IFR-Rc-cw2"/>
+                        <outlet property="bloodType" destination="UWd-d6-V2s" id="ccP-h1-ksV"/>
+                        <outlet property="result" destination="xfn-b7-CJc" id="0n9-gN-ZVE"/>
+                        <outlet property="showNum" destination="3zE-Mx-mRr" id="RW3-IX-T31"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="2mO-1v-5ht">
-                    <rect key="frame" x="0.0" y="0.0" width="110" height="200"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <viewLayoutGuide key="safeArea" id="Stb-x3-93P"/>
-                </stackView>
             </objects>
         </scene>
     </scenes>
